# Octosynk

./: Dockerfile  LICENSE  README.md  conftest.py  debug_api.py  docker-compose.yml  entrypoint.sh  list-devices.py  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/octosynk/: __init__.py  app.py  auth.py  config.py  mqtt.py  octopus.py  schedules.py  sunsynk.py
src/tests/: conftest.py  test_octopus.py  test_schedules.py
